--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   laravel_app:
     build:
       context: .
@@ -8,6 +9,8 @@ services:
     ports:
       - "5080:80"
     working_dir: /var/www/html
+    volumes:
+      - ./logs/:/var/www/html/storage/logs
     depends_on:
       - mysql
     environment:
