--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     container_name: laravel_app
     restart: unless-stopped
     ports:
-      - "5080:80"
+      - 5080:80
     working_dir: /var/www/html
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - ./logs/:/var/www/html/storage/logs
     depends_on:
       - mysql
