--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,5 @@ services:
     expose:
       - 3306
     volumes:
-      - dbdata:/var/lib/mysql
+      - ./db:/var/lib/mysql
 
-volumes:
-  dbdata:
