--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       DB_PASSWORD: aldana1234
 
   mysql:
-    image: mysql:5.7
+    image: mysql:latest
     container_name: mysql_db
     restart: unless-stopped
     environment:
