--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,15 +28,14 @@ services:
         ports:
             - '${FORWARD_DB_PORT:-3307}:3306'
         environment:
-              MYSQL_ROOT_PASSWORD: 'aldana1234'
-              MYSQL_ROOT_HOST: '%'
-              MYSQL_DATABASE: 'facturacion_buffet'
-              MYSQL_USER: 'root'
-              MYSQL_PASSWORD: 'aldana1234'
-              MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            MYSQL_ROOT_PASSWORD: aldana1234
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: facturacion_buffet
+            MYSQL_USER: root
+            MYSQL_PASSWORD: aldana1234
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
-            #- './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
         healthcheck:
