--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "5080:80"
     working_dir: /var/www/html
     volumes:
-      - .:/var/www/html  
+      - ./src:/var/www/html  
       - storage-volume:/var/www/html/storage  
 
     depends_on:
