Docker-compose.yml

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   laravel_app:
     build:
-      context: .
+      context: ./src
       dockerfile: Dockerfile
     container_name: laravel_app
     restart: unless-stopped
@@ -11,9 +11,7 @@ services:
       - "5080:80"
     working_dir: /var/www/html
     volumes:
-      - ./src:/var/www/html  
-      - storage-volume:/var/www/html/storage  
-
+      - ./src:/var/www/html 
     depends_on:
       - mysql
     environment:
@@ -35,6 +33,3 @@ services:
       MYSQL_DATABASE: facturacion_buffet
     volumes:
       - ./db:/var/lib/mysql
-
-volumes:
-  storage-volume:
