--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 services:
     laravel.test:
         build:
@@ -11,7 +9,7 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-8080}:80'
+            - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
@@ -28,17 +26,17 @@ services:
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
-            - '${FORWARD_DB_PORT:-3307}:3306'
+            - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-              MYSQL_ROOT_PASSWORD: 'aldana1234'
-              MYSQL_ROOT_HOST: '%'
-              MYSQL_DATABASE: 'facturacion_buffet'
-              MYSQL_USER: 'root'
-              MYSQL_PASSWORD: 'aldana1234'
-              MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
-            #- './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
         healthcheck:
@@ -53,4 +51,5 @@ networks:
     sail:
         driver: bridge
 volumes:
-  storage-volume:
+    sail-mysql:
+        driver: local
