--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -18,11 +18,13 @@ services:
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
         volumes:
-            - '.:/var/www/html'
+            - './:/var/www/html'
         networks:
             - sail
         depends_on:
             - mysql
+
+
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
